# BeaconMCP

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  LICENSE  README.md  beaconmcp.yaml.example  docker-compose.yml  infrastructure.yaml  pyproject.toml
deploy/: beaconmcp.service  install.sh  tarkamcp.service
docs/: clients.md  dashboard.md  tests.md  totp-automation.md  troubleshooting.md
docs/superpowers/specs/: 2026-04-16-beaconmcp-design.md  2026-04-16-tarkamcp-design.md  2026-04-17-beaconmcp-dashboard-design.md  2026-04-17-tarka-dashboard-design.md
src/beaconmcp/: __main__.py  audit.py  auth.py  config.py  metrics.py  ratelimit.py  server.py  utils.py  wizard.py
src/beaconmcp/bmc/: __init__.py  base.py  hp_ilo.py  idrac.py  ipmi.py  redfish.py  registry.py  supermicro.py  tools.py
src/beaconmcp/dashboard/: __init__.py  app.py  chat.py  confirmations.py  conversations.py  csrf.py  db.py  dyn_reg.py  session.py
src/beaconmcp/dashboard/static/: app.css  chat.js  login.js  theme.js  tokens.js  totp_boxes.js  totp_refresh.js
src/beaconmcp/dashboard/templates/: base.html  chat.html  connectors.html  login.html  overview.html  tokens.html  totp_refresh.html  usage_cost.html
src/beaconmcp/proxmox/: aggregators.py  client.py  monitoring.py  system.py  vms.py
src/beaconmcp/security/: tools.py
src/beaconmcp/ssh/: client.py  tools.py
src/tarkamcp/: __main__.py  auth.py  config.py  server.py
src/tarkamcp/dashboard/: __init__.py  app.py  chat.py  conversations.py  csrf.py  db.py  session.py  usage.py
src/tarkamcp/dashboard/static/: app.css  chat.js
src/tarkamcp/dashboard/templates/: base.html  chat.html  login.html  tokens.html  totp_refresh.html
src/tarkamcp/ilo/: client.py  tools.py
src/tarkamcp/proxmox/: client.py  monitoring.py  system.py  vms.py
src/tarkamcp/security/: tools.py
src/tarkamcp/ssh/: client.py  tools.py
tests/: conftest.py  test_audit.py  test_bmc_ipmi.py  test_bmc_registry.py  test_config_yaml.py  test_dashboard_chat.py  test_dashboard_integration.py  test_dashboard_unit.py  test_dashboard_usage.py  test_dynamic_registration.py  test_integration.py  test_metrics.py  test_ratelimit.py  test_snapshots.py  test_trusted_redirect.py  test_utils.py  test_wizard.py
