[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tarkamcp"
version = "0.1.0"
description = "MCP server for Proxmox VE infrastructure management"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "proxmoxer",
    "requests",
    "python-hpilo",
    "asyncssh",
    "python-dotenv",
    "pyyaml",
    "pyotp",
    "qrcode",
    "cryptography>=42",
    "jinja2>=3",
    "google-genai>=1.0",
]

[project.scripts]
tarkamcp = "tarkamcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tarkamcp"]

[tool.hatch.build.targets.wheel.force-include]
"src/tarkamcp/assets/logo.webp" = "tarkamcp/assets/logo.webp"
"src/tarkamcp/dashboard/templates" = "tarkamcp/dashboard/templates"
"src/tarkamcp/dashboard/static" = "tarkamcp/dashboard/static"
