[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beaconmcp"
version = "2.0.0"
description = "Remote MCP server for Proxmox VE and BMC (iLO/IPMI) infrastructure management"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "proxmoxer",
    "requests",
    "python-hpilo",
    "asyncssh",
    "python-dotenv",
    "pyyaml",
    "pyotp",
    "qrcode",
    "cryptography>=42",
    "jinja2>=3",
    "google-genai>=1.0",
    "httpx",
]

[project.scripts]
beaconmcp = "beaconmcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/beaconmcp"]

[tool.hatch.build.targets.wheel.force-include]
"src/beaconmcp/assets/logo.webp" = "beaconmcp/assets/logo.webp"
"src/beaconmcp/dashboard/templates" = "beaconmcp/dashboard/templates"
"src/beaconmcp/dashboard/static" = "beaconmcp/dashboard/static"
